enterprise/operator/pkg/lb/testdata/lbservice_translation/24-https-request-filtering/output-t1-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  namespace: default
  name: lbfe-lb-1
subsets:
  - addresses:
      - ip: 172.18.0.3
      - ip: 172.18.0.2
    ports:
      - name: tcp
        port: 80
        protocol: TCP
