enterprise/operator/pkg/lb/testdata/lbservice_translation/24-https-request-filtering/output-t1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/ips: 100.64.0.100
    lbipam.cilium.io/sharing-key: lb-1
    loadbalancer.isovalent.com/type: t1
    service.cilium.io/forwarding-mode: dsr
    service.cilium.io/health-check-bgp-advertise-threshold: "1"
    service.cilium.io/health-check-http-method: GET
    service.cilium.io/health-check-http-path: /health
    service.cilium.io/health-check-probe-interval: 10s
    service.cilium.io/health-check-probe-timeout: 5s
    service.cilium.io/health-check-quarantine-timeout: 0s
    service.cilium.io/health-check-threshold-healthy: "1"
    service.cilium.io/health-check-threshold-unhealthy: "1"
    service.cilium.io/lb-algorithm: maglev
    service.cilium.io/proxy-delegation: delegate-if-local
    service.cilium.io/node-selector: service.cilium.io/node in (t1,t1-t2)
    service.cilium.io/type: "LoadBalancer"
  labels:
    loadbalancer.isovalent.com/vip-name: lb-1
  namespace: default
  name: lbfe-lb-1
spec:
  allocateLoadBalancerNodePorts: false
  ports:
    - name: tcp
      port: 80
      protocol: TCP
  sessionAffinity: None
  type: LoadBalancer
